# SynthER

./: pyproject.toml  requirements.txt
synther/: __init__.py
synther/diffusion/: train_diffuser_compatible.py  utils.py
